--- a/templates/admin_dashboard/event_form.html
+++ b/templates/admin_dashboard/event_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin_dashboard/base.html' %}
 {% load static %}
 
 {% block title %}Create Event{% endblock %}
